--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
     "react-component-gulp-tasks": "^0.7.6",
     "react-dom": "^0.14.0"
   },
+  "scripts": {
+
+    "start": "node server.js"
+  },
   "peerDependencies": {
     "react": "^0.14.0"
   },
