--- a/package.json
+++ b/package.json
@@ -24,10 +24,7 @@
     "react-component-gulp-tasks": "^0.7.6",
     "react-dom": "^0.14.0"
   },
-  "scripts": {
 
-    "start": "node server.js"
-  },
   "peerDependencies": {
     "react": "^0.14.0"
   },
@@ -40,7 +37,7 @@
     "lint": "eslint ./; true",
     "publish:site": "NODE_ENV=production gulp publish:examples",
     "release": "NODE_ENV=production gulp release",
-    "start": "gulp dev",
+    "start": "node server.js",
     "test": "echo \"no tests yet\" && exit 0",
     "watch": "gulp watch:lib"
   },
