--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "css-reactmenu uses component property to add menu,resonsive menu",
   "main": "lib/Css3Reactmenu.js",
   "author": "vishnuvardhana",
-
   "repository": {
     "type": "git",
     "url": "https://github.com/vishnuvardhana/css-reactmenu"
@@ -13,7 +12,8 @@
     "url": "https://github.com/vishnuvardhana/css-reactmenu/issues"
   },
   "dependencies": {
-    "classnames": "^2.1.2"
+    "classnames": "^2.1.2",
+    "express": "^4.14.0"
   },
   "devDependencies": {
     "babel-eslint": "^4.1.3",
@@ -24,7 +24,6 @@
     "react-component-gulp-tasks": "^0.7.6",
     "react-dom": "^0.14.0"
   },
-
   "peerDependencies": {
     "react": "^0.14.0"
   },
