--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "css-reactmenu",
+  "name": "css3-reactmenu",
   "version": "3.0.0",
   "description": "css-reactmenu uses component property to add menu,resonsive menu",
   "main": "lib/Css3Reactmenu.js",
   "author": "vishnuvardhana",
+
   "repository": {
     "type": "git",
     "url": "https://github.com/vishnuvardhana/css-reactmenu"
@@ -12,8 +13,7 @@
     "url": "https://github.com/vishnuvardhana/css-reactmenu/issues"
   },
   "dependencies": {
-    "classnames": "^2.1.2",
-    "express": "^4.14.0"
+    "classnames": "^2.1.2"
   },
   "devDependencies": {
     "babel-eslint": "^4.1.3",
@@ -36,7 +36,7 @@
     "lint": "eslint ./; true",
     "publish:site": "NODE_ENV=production gulp publish:examples",
     "release": "NODE_ENV=production gulp release",
-    "start": "node server.js",
+    "start": "gulp dev",
     "test": "echo \"no tests yet\" && exit 0",
     "watch": "gulp watch:lib"
   },
@@ -47,6 +47,6 @@
     "react-menu",
     "reusable-menu",
     "react-menu-component",
-    "css3"
+    "css4"
   ]
 }
